# SpaceBubba

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
Release/: Makefile  Super-Bubba-Awesome-Space.sh
config/: controls.json
includes/: BFBroadPhase.h  Button.h  Collider.h  ControlStatus.h  Controls.h  ControlsManager.h  DeathOnCollision.h  FireParticle.h  FireSphere.h  GameObject.h  GameObjectType.h  HudRenderer.h  HudStrings.h  IComponent.h  InputManager.h  (+35 more)
src/: CMakeLists.txt  main.cpp
src/Input/: Button.cpp  ControlStatus.cpp  ControlsManager.cpp  InputManager.cpp  JoystickAxis.cpp  JoystickButton.cpp  KeyboardButton.cpp  MouseAxis.cpp  MouseButton.cpp  MousePosition.cpp
src/Misc/: CubeMapTexture.cpp  InputManager.cpp  ResourceManager.cpp
src/cameras/: PerspectiveCamera.cpp
src/collision/: BFBroadPhase.cpp  Collider.cpp  Collider.h  Octree.cpp
src/components/: DeathOnCollision.cpp  HudRenderer.cpp  KillerComponent.cpp  MoveComponent.cpp  PostProcessingRenderer.cpp  ShootComponent.cpp  SpaceShipComponent.cpp  SpawnAsteroidOnDeath.cpp  StandardRenderer.cpp  TimedLife.cpp
src/core/: Renderer.cpp
src/logging/: Logger.cpp
src/objects/: GameObject.cpp  Mesh.cpp  Scene.cpp  SkyBoxRenderer.cpp  SpaceBubbaHudRenderer.cpp  SpaceBubbaObject.cpp  Texture.cpp
src/particle/: FireParticle.cpp  FireSphere.cpp  ParticleGenerator.cpp  SmokeParticle.cpp
src/sound/: SoundManager.cpp
src/spaceGame/: SpaceShip.cpp  SpaceShipComponent.cpp  main.cpp
src/spaceGame/projectiles/: LaserProjectile.cpp  Projectile.cpp
src/spaceGame/weapons/: LaserCannon.cpp  Weapon.cpp
(+19 files in other folders)
